# Choreograph

./: .clang-format  .gitignore  README.md  meson.build
.github/workflows/: Linux.yml
samples/include/: Resources.h
samples/src/: SamplesApp.cpp  meson.build
samples/src/pockets/: Pockets.h  Scene.cpp  Scene.h
samples/src/samples/: BezierConstruction.cpp  BezierConstruction.h  Quaternions.cpp  Quaternions.h  Repetition.cpp  Repetition.h  Samples.h  SlideAndBounce.cpp  SlideAndBounce.h  WormBuncher.cpp  WormBuncher.h
src/choreograph/: Choreograph.h  Cue.cpp  Cue.h  Easing.h  Motion.hpp  Output.hpp  Phrase.hpp  Sequence.hpp  TimeType.h  Timeline.cpp  Timeline.h  TimelineItem.cpp  TimelineItem.h  TimelineOptions.hpp  meson.build
src/choreograph/detail/: MakeUnique.hpp  VectorManipulation.hpp
src/choreograph/phrase/: Combine.hpp  Hold.hpp  Procedural.hpp  Ramp.hpp  Retime.hpp  Sugar.hpp
src/choreograph/specialization/: CinderSpecialization.hpp
tests/: Benchmarks_test.cpp  Cue_test.cpp  Ease_test.cpp  ForumMiscellany_test.cpp  Grouping_test.cpp  Motion_test.cpp  Numbers_test.cpp  Phrase_test.cpp  Sequence_test.cpp  Timeline_test.cpp  meson.build
tests/choreograph/: Configuration.h
